# Adaptive-RAG-Clinical-Assistant

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  environment.yml  pyproject.toml  run_eval.py
docs/: API.md  CONTRIBUTING.md  architecture.md  architecture_diagram.pptx  diag_dataflow.mmd  diag_sequence.mmd  eval-guide.md  project_explainer.docx  project_explainer.html  project_explainer_v2.docx
docs/rag-system/: generate_adaptive_evaluation.py  generate_hallucination_mitigation.py  generate_index.py  generate_rag_pipeline.py  test.mmd
eval/: __init__.py  adaptive_vs_generic.py  classification_accuracy.py  format_compliance.py  hybrid_comparison.py  latency_measurement.py  metrics.py  model_comparison.py  ocr_retrieval_quality.py  persona_evaluation.py  readability_analysis.py
scripts/: align_report_with_codebase.py  extract_mermaid.py  extract_svg.py  gen_adaptive_docx.py  gen_arch_pptx.py  gen_arch_svg.py  gen_benchmark_docx.py  gen_benchmark_figures.py
src/: __init__.py  config.py  embeddings.py  faithfulness.py  ingestion.py  personas.py  prompts.py  query_classifier.py  retrieval.py  utils.py
src/llm/: __init__.py  base.py  factory.py  (+2 more)
tests/: __init__.py  conftest.py  test_adaptive_vs_generic.py  test_classification_accuracy.py  test_config.py  test_faithfulness.py  test_format_compliance.py  test_ingestion.py  test_integration.py  test_llm_factory.py  test_llm_providers.py  test_llm_system_prompt.py  test_ocr_factory.py  test_personas.py  test_prompts.py  test_query_classifier.py  test_readability_analysis.py  test_rrf.py  test_utils.py
(+12 files in other folders)
